# cmake-opengl-template

./: README.md
testproject/: CMakeLists.txt
testproject/include/input/: input.h
testproject/include/window/: window.h
testproject/src/: main.cpp
testproject/src/input/: input.cpp
testproject/src/window/: window.cpp
